add git ignore and google search form

--- a/forms/form.html
+++ b/forms/form.html
@@ -22,5 +22,9 @@
             <input type="color" id="color">
             </p>
         </form>
+        <form action="https://www.google.com/search">
+            <input type="text" name="q">
+            <button>Search on Google</button>
+        </form>
     </body>
 </html>
