--- a/forms/form.html
+++ b/forms/form.html
@@ -23,7 +23,7 @@
             </p>
         </form>
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
+            <input type="text" name="q" required>
             <button>Search on Google</button>
         </form>
     </body>
